[tool.poetry]
name = "pyblanco"
version = "0.1.0"
description = "An empty Python project"
authors = ["Markus Rothe <markus.rothe@rite.cc>"]
license = "BSL-1.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
