[tool.poetry]
name = "pyblanco"
version = "0.1.0"
description = "An empty Python project"
authors = ["Markus Rothe <markus.rothe@rite.cc>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.9"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.scripts]
blanco = "pyblanco.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
